basic-framework fix store update user

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 POSTGRES_MIGRATIONS_DIR=./internal/app/server/repository/storage/postgres/migrations
 SQLITE_MIGRATIONS_DIR=./internal/app/client/repository/storage/sqlite/migrations
 SQLITE_DATA_SOURCE_NAME=./internal/app/client/store.db
+SQLITE_TIMEOUT=10
 
 DB_HOST=localhost
 DB_NAME=keeper
@@ -15,6 +16,7 @@ HTTP_PORT=80
 
 GRPC_HOST=localhost
 GRPC_PORT=3200
+GRPC_ENABLED_TLS=false
 
 
 LOG_LEVEL=info
